--- a/src/Class/F.css
+++ b/src/Class/F.css
@@ -5,29 +5,10 @@
     justify-content: center;
     margin-left: 65px;
     border-radius: 50%;
+    margin: 0 auto;
 }
 
-#F p, #F_2 p, #F_4 p {
+#F p{
     font-size: 50px;
     padding-top: 15px;
-}
-
-/* 대학본부 층 css */
-#F_2{
-    background-color: #093555;
-    width: 100px;
-    height: 100px;
-    justify-content: center;
-    margin-left: 10px;
-    border-radius: 50%;
-}
-
-/* 인문2관 층 css */
-#F_4{
-    background-color: #093555;
-    width: 100px;
-    height: 100px;
-    justify-content: center;
-    margin-left: 120px;
-    border-radius: 50%;
 }
